tests/instantiating/invalid/stream_elems_coflict_param_return/bus.fbd
type my_param param

Main bus
	My_Stream stream
		P my_param
		R return
